replaced main by client in fxml files

--- a/Client/src/main/resources/gui/fxml/AdminOptionMenu.fxml
+++ b/Client/src/main/resources/gui/fxml/AdminOptionMenu.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.admin.AdminOptionMenuController">
+<HBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.gui.admin.AdminOptionMenuController">
    <children>
       <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="596.0" prefWidth="140.0">
          <children>
