--- a/Client/src/main/resources/gui/fxml/AdminRegistryMenu.fxml
+++ b/Client/src/main/resources/gui/fxml/AdminRegistryMenu.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="388.0" prefWidth="512.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.admin.AdminRegistryController">
+<AnchorPane prefHeight="388.0" prefWidth="512.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.gui.admin.AdminRegistryController">
    <children>
       <Label layoutX="180.0" layoutY="22.0" text="Admin Registration">
          <font>
