--- a/Client/src/main/resources/gui/fxml/FirstAdminRegister.fxml
+++ b/Client/src/main/resources/gui/fxml/FirstAdminRegister.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.authentication.FirstAdminRegister">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.gui.authentication.FirstAdminRegister">
    <children>
       <Label layoutX="207.0" layoutY="84.0" text="First Admin registration">
          <font>
