--- a/Client/src/main/resources/gui/fxml/ProductCard.fxml
+++ b/Client/src/main/resources/gui/fxml/ProductCard.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" prefHeight="360.0" prefWidth="180.0" spacing="10.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.product.ProductCardController">
+<VBox alignment="TOP_CENTER" prefHeight="360.0" prefWidth="180.0" spacing="10.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.gui.product.ProductCardController">
     <children>
         <ImageView id="image" fx:id="productImage" fitHeight="120.0" fitWidth="160.0" onMouseClicked="#open" pickOnBounds="true" preserveRatio="true">
             <image>
