--- a/Client/src/main/resources/gui/fxml/RegisterMenu.fxml
+++ b/Client/src/main/resources/gui/fxml/RegisterMenu.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<TabPane fx:id="tabPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.authentication.RegisterMenuController">
+<TabPane fx:id="tabPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.gui.authentication.RegisterMenuController">
    <tabs>
       <Tab fx:id="registerTab" closable="false" text="Register">
          <content>
