--- a/Client/src/main/resources/gui/fxml/SingleProductForSellerPage.fxml
+++ b/Client/src/main/resources/gui/fxml/SingleProductForSellerPage.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<VBox fx:id="totalBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="637.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.seller.SingleProductForSellerPageController">
+<VBox fx:id="totalBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="637.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.gui.seller.SingleProductForSellerPageController">
     <children>
         <HBox prefHeight="453.0" prefWidth="600.0">
             <children>
