--- a/Client/src/main/resources/gui/fxml/ChatPage.fxml
+++ b/Client/src/main/resources/gui/fxml/ChatPage.fxml
@@ -8,26 +8,24 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0"
-      prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="client.gui.ChatPageController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.gui.ChatPageController">
     <children>
         <ScrollPane fx:id="chatScroll" prefHeight="570.0" prefWidth="600.0">
             <content>
-                <VBox fx:id="chatVBox" minWidth="200.0" prefWidth="600.0"/>
+                <VBox fx:id="chatVBox" minWidth="200.0" prefWidth="600.0" />
             </content>
         </ScrollPane>
         <HBox alignment="CENTER_LEFT" prefHeight="80.0" prefWidth="600.0" spacing="40.0">
             <children>
-                <TextArea fx:id="messageTextArea" prefHeight="50.0" prefWidth="495.0" promptText="Enter Your Word"/>
+                <TextArea fx:id="messageTextArea" prefHeight="50.0" prefWidth="495.0" promptText="Enter Your Word" />
                 <ImageView fx:id="sendImage" fitHeight="43.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@../pic/icons8-email-send-96.png"/>
+                        <Image url="@../pic/icons8-email-send-96.png" />
                     </image>
                 </ImageView>
             </children>
             <padding>
-                <Insets bottom="5.0" left="10.0" right="10.0" top="5.0"/>
+                <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
             </padding>
         </HBox>
     </children>
