--- a/Client/src/main/resources/gui/fxml/SupporterButtons.fxml
+++ b/Client/src/main/resources/gui/fxml/SupporterButtons.fxml
@@ -19,7 +19,7 @@
                </image>
             </ImageView>
             <Button fx:id="personalPage" mnemonicParsing="false" prefHeight="42.0" prefWidth="170.0" text="Personal Page" />
-            <TableView fx:id="tableUsers" prefHeight="438.0" prefWidth="179.0">
+            <TableView fx:id="tableUsers" maxHeight="430.0" prefHeight="430.0" prefWidth="179.0">
               <columns>
                 <TableColumn fx:id="usersTable" prefWidth="177.59998452663422" text="Users" />
               </columns>
