--- a/Client/src/main/resources/gui/fxml/AuctionPageForCustomer.fxml
+++ b/Client/src/main/resources/gui/fxml/AuctionPageForCustomer.fxml
@@ -2,31 +2,37 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<HBox fx:id="chatBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-      prefHeight="720.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="client.gui.customer.AuctionPageController">
+<HBox fx:id="chatBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.gui.customer.AuctionPageController">
     <children>
         <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="200.0" spacing="20.0">
             <children>
-                <TextField fx:id="cashTextField" promptText="CASH"/>
-                <Button fx:id="SendButton" mnemonicParsing="false" prefHeight="41.0" prefWidth="116.0" text="Send"/>
-                <TableView fx:id="auctionTable" prefHeight="598.0" prefWidth="192.0">
+                <TextField fx:id="cashTextField" promptText="CASH" />
+                <Button fx:id="sendButton" mnemonicParsing="false" prefHeight="28.0" prefWidth="88.0" text="Send" />
+            <Label fx:id="errorLabel" prefHeight="30.0" prefWidth="194.0" textFill="RED">
+               <font>
+                  <Font size="11.0" />
+               </font>
+            </Label>
+                <TableView fx:id="auctionTable" prefHeight="283.0" prefWidth="192.0">
                     <columns>
-                        <TableColumn fx:id="auctionColumns" prefWidth="191.19999980926514" text="Auctions"/>
+                        <TableColumn fx:id="auctionColumns" prefWidth="191.19999980926514" text="Auctions" />
                     </columns>
                 </TableView>
+            <TextArea fx:id="descriptionOfProduct" prefHeight="254.0" prefWidth="192.0" />
             </children>
             <padding>
-                <Insets bottom="4.0" left="4.0" right="4.0" top="10.0"/>
+                <Insets bottom="4.0" left="4.0" right="4.0" top="10.0" />
             </padding>
         </VBox>
-        <VBox alignment="CENTER" maxHeight="720.0" maxWidth="0.0" prefHeight="720.0" prefWidth="600.0"/>
+        <VBox fx:id="chatBox" alignment="CENTER" maxHeight="720.0" maxWidth="600.0" prefHeight="720.0" prefWidth="600.0" />
     </children>
 </HBox>
