--- a/Client/src/main/resources/gui/fxml/CreateSingleProductForSeller.fxml
+++ b/Client/src/main/resources/gui/fxml/CreateSingleProductForSeller.fxml
@@ -54,6 +54,7 @@
                   <Insets left="10.0" right="10.0" />
                </padding>
             </VBox>
+            <Button fx:id="uploadFileButton" mnemonicParsing="false" prefHeight="34.0" prefWidth="92.0" text="Upload File" />
             <Button fx:id="imageChooserButton" mnemonicParsing="false" prefHeight="35.0" prefWidth="103.0" text="UploadPhoto" />
             <Button fx:id="clearButton" mnemonicParsing="false" onAction="#clearAllClicked" prefHeight="33.0" prefWidth="91.0" text="clear all" />
             <Button fx:id="saveButton" mnemonicParsing="false" onAction="#saveButtonClicked" prefHeight="34.0" prefWidth="91.0" text="save" />
