--- a/Client/src/main/resources/gui/fxml/MessageCard.fxml
+++ b/Client/src/main/resources/gui/fxml/MessageCard.fxml
@@ -6,7 +6,7 @@
 
 <HBox fx:id="box" alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" spacing="5.0" style="-fx-background-color: b5e89d;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.gui.MessageCardController">
    <children>
-      <TextArea fx:id="message" maxHeight="100.0" prefWidth="460.0" style="-fx-background-color: #b5e89d;" />
+      <TextArea fx:id="message" maxHeight="100.0" prefHeight="100.0" prefWidth="338.0" style="-fx-background-color: #b5e89d;" />
    </children>
    <padding>
       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
