add ssl key to project https setup

--- a/Client/src/main/resources/gui/fxml/ChatPage.fxml
+++ b/Client/src/main/resources/gui/fxml/ChatPage.fxml
@@ -12,7 +12,9 @@
     <children>
         <ScrollPane fx:id="chatScroll" prefHeight="570.0" prefWidth="600.0">
             <content>
-                <VBox fx:id="chatVBox" minWidth="200.0" prefWidth="600.0" />
+                <VBox fx:id="chatVBox" minWidth="200.0" prefWidth="600.0">
+                    <fx:include source="MessageCard.fxml"/>
+                </VBox>
             </content>
         </ScrollPane>
         <HBox alignment="CENTER_LEFT" prefHeight="80.0" prefWidth="600.0" spacing="40.0">
