--- a/Client/src/main/resources/gui/fxml/RegisterMenu.fxml
+++ b/Client/src/main/resources/gui/fxml/RegisterMenu.fxml
@@ -87,6 +87,7 @@
                         <ChoiceBox id="roleChoice" fx:id="roleChoice" layoutX="116.0" layoutY="287.0" prefWidth="150.0" />
                         <Label layoutX="73.0" layoutY="291.0" text="Role" />
                         <Label id="errorLabel" fx:id="errorLabelRegister" alignment="CENTER" contentDisplay="CENTER" layoutX="151.0" layoutY="106.0" prefHeight="17.0" prefWidth="286.0" textAlignment="CENTER" textFill="RED" />
+                        <TextField fx:id="captchaBoxRegister" layoutX="116.0" layoutY="330.0" />
                      </children>
                   </AnchorPane>
                </center>
@@ -126,6 +127,7 @@
                         <Label layoutX="207.0" layoutY="338.0" text="Don't have an account?" />
                         <Hyperlink fx:id="loginHyperLink" layoutX="227.0" layoutY="355.0" onMouseClicked="#redirectToRegister" text="Register Here!" />
                         <Label fx:id="errorLabelLogin" alignment="CENTER" layoutX="122.0" layoutY="103.0" prefHeight="17.0" prefWidth="295.0" textAlignment="CENTER" textFill="RED" />
+                        <TextField fx:id="captchaBoxLogin" layoutX="343.0" layoutY="279.0" />
                      </children>
                   </AnchorPane>
                </right>
