--- a/Client/src/main/resources/gui/fxml/CreateSingleProductForSeller.fxml
+++ b/Client/src/main/resources/gui/fxml/CreateSingleProductForSeller.fxml
@@ -27,7 +27,12 @@
                         <Insets bottom="10.0" />
                      </VBox.margin>
                   </TextField>
-                  <TextArea fx:id="descriptionField" prefHeight="200.0" prefWidth="200.0" text="Description" />
+                  <TextArea fx:id="descriptionField" prefHeight="63.0" prefWidth="260.0" text="Description" />
+                  <Label fx:id="fileLabel">
+                     <VBox.margin>
+                        <Insets top="30.0" />
+                     </VBox.margin>
+                  </Label>
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
