--- a/Client/src/main/resources/gui/fxml/Cart.fxml
+++ b/Client/src/main/resources/gui/fxml/Cart.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
@@ -14,10 +15,9 @@
    <content>
       <VBox prefHeight="703.0" prefWidth="1278.0">
          <children>
-            <VBox prefHeight="69.0" prefWidth="1265.0" style="-fx-background-color: #565656;" />
-            <VBox prefHeight="85.0" prefWidth="1278.0">
+            <VBox prefHeight="139.0" prefWidth="1278.0">
                <children>
-                  <HBox prefHeight="90.0" prefWidth="1278.0">
+                  <HBox prefHeight="137.0" prefWidth="1278.0">
                      <children>
                         <VBox alignment="TOP_CENTER" prefHeight="85.0" prefWidth="362.0">
                            <children>
@@ -49,6 +49,23 @@
                      </children>
                   </HBox>
                </children></VBox>
+            <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="30.0">
+               <children>
+                  <Label fx:id="errorLabel" prefHeight="42.0" prefWidth="718.0" textFill="#f50000">
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Label>
+                  <TextField fx:id="bankIDTextField" prefHeight="26.0" prefWidth="184.0" promptText="Your Bank ID" />
+                  <CheckBox fx:id="bankCheckBox" mnemonicParsing="false" prefHeight="56.0" prefWidth="166.0" text="purchase by bank account" />
+               </children>
+               <padding>
+                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+               </padding>
+               <VBox.margin>
+                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+               </VBox.margin>
+            </HBox>
             <VBox fx:id="cartProductsVBox" prefHeight="543.0" prefWidth="1278.0" />
          </children>
       </VBox>
