--- a/Client/src/main/resources/gui/fxml/BankAccountCreatingPage.fxml
+++ b/Client/src/main/resources/gui/fxml/BankAccountCreatingPage.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.gui.BankAccountCreatingController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" spacing="5.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.gui.BankAccountCreatingController">
     <children>
         <HBox alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="591.0" spacing="20.0">
             <children>
@@ -59,5 +59,38 @@
         </HBox>
         <Label fx:id="errorLabel" layoutX="79.0" layoutY="296.0" prefHeight="32.0" prefWidth="490.0" textAlignment="CENTER" textFill="RED" />
         <Button fx:id="registerButton" mnemonicParsing="false" prefHeight="42.0" prefWidth="105.0" text="Register" />
+      <Label prefHeight="26.0" prefWidth="180.0" text="Charge Your Bank Account" />
+      <HBox alignment="CENTER_LEFT" prefHeight="46.0" prefWidth="591.0" spacing="20.0">
+         <children>
+            <TextField fx:id="chargeAccountId" prefHeight="26.0" prefWidth="150.0" promptText="YOUR Account Id" />
+            <TextField fx:id="chargeAmount" promptText="Amount" />
+            <Button fx:id="chargeButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="118.0" text="Charge">
+               <HBox.margin>
+                  <Insets left="30.0" />
+               </HBox.margin>
+            </Button>
+         </children>
+         <VBox.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </VBox.margin>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
+      </HBox>
+      <Label fx:id="getMoneyLabel" prefHeight="23.0" prefWidth="130.0" text="Get Money" />
+      <HBox alignment="CENTER_LEFT" prefHeight="46.0" prefWidth="591.0" spacing="20.0">
+         <children>
+            <TextField fx:id="withDrawAccountId" prefHeight="26.0" prefWidth="150.0" promptText="YOUR Account Id" />
+            <TextField fx:id="withDrawAmount" promptText="Amount" />
+            <Button fx:id="withDrawButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="124.0" text="WithDarw">
+               <HBox.margin>
+                  <Insets left="30.0" />
+               </HBox.margin>
+            </Button>
+         </children>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
+      </HBox>
     </children>
 </VBox>
