--- a/Client/src/main/resources/gui/fxml/BankAccountCreatingPage.fxml
+++ b/Client/src/main/resources/gui/fxml/BankAccountCreatingPage.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" spacing="5.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.gui.BankAccountCreatingController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" spacing="2.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.gui.BankAccountCreatingController">
     <children>
-        <HBox alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="591.0" spacing="20.0">
+        <HBox alignment="CENTER_LEFT" prefHeight="46.0" prefWidth="591.0" spacing="20.0">
             <children>
                 <Label prefHeight="54.0" prefWidth="123.0" text="Username " />
                 <TextField fx:id="userNameTextField" prefHeight="26.0" prefWidth="361.0" />
@@ -22,7 +22,7 @@
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </padding>
         </HBox>
-        <HBox alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="591.0" spacing="20.0">
+        <HBox alignment="CENTER_LEFT" prefHeight="38.0" prefWidth="600.0" spacing="20.0">
             <children>
                 <Label prefHeight="54.0" prefWidth="123.0" text="Fisrtname" />
                 <TextField fx:id="firstNameTextField" prefHeight="26.0" prefWidth="361.0" />
@@ -31,7 +31,7 @@
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </padding>
         </HBox>
-        <HBox alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="591.0" spacing="20.0">
+        <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="600.0" spacing="20.0">
             <children>
                 <Label prefHeight="54.0" prefWidth="123.0" text="Lastname" />
                 <TextField fx:id="lastNameTextField" prefHeight="26.0" prefWidth="361.0" />
@@ -40,7 +40,7 @@
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </padding>
         </HBox>
-        <HBox alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="591.0" spacing="20.0">
+        <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="600.0" spacing="20.0">
             <children>
                 <Label prefHeight="54.0" prefWidth="123.0" text="Password" />
             <PasswordField fx:id="passwordTextField" prefHeight="26.0" prefWidth="359.0" />
@@ -49,7 +49,7 @@
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </padding>
         </HBox>
-        <HBox alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="591.0" spacing="20.0">
+        <HBox alignment="CENTER_LEFT" prefHeight="41.0" prefWidth="600.0" spacing="20.0">
             <children>
                 <Label prefHeight="54.0" prefWidth="123.0" text="Repeated Password" />
             <PasswordField fx:id="repeatTextField" prefHeight="26.0" prefWidth="361.0" />
@@ -60,7 +60,7 @@
         </HBox>
         <Label fx:id="errorLabel" layoutX="79.0" layoutY="296.0" prefHeight="32.0" prefWidth="490.0" textAlignment="CENTER" textFill="RED" />
         <Button fx:id="registerButton" mnemonicParsing="false" prefHeight="42.0" prefWidth="105.0" text="Register" />
-      <Label prefHeight="26.0" prefWidth="180.0" text="Charge Your Bank Account" />
+      <Label prefHeight="26.0" prefWidth="123.0" text="Charge" />
       <HBox alignment="CENTER_LEFT" prefHeight="46.0" prefWidth="591.0" spacing="20.0">
          <children>
             <TextField fx:id="chargeAccountId" prefHeight="26.0" prefWidth="150.0" promptText="YOUR Account Id" />
